--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,15 @@ dialog > p {
   margin-bottom: 60vh;
 }
 #icon-type,
-#new-icon-type {
+#new-icon-type,
+#priority-select,
+#new-priority-select {
   width: 100%;
   border: 1px solid #d9d9d9;
   margin-bottom: 0.1rem;
   background-color: #f8f8f8;
   border-radius: 0.1rem;
-  padding-left: 0.5rem;
+  padding-left: 0.2rem;
   height: 1.8rem;
   font-size: 1rem;
 }
@@ -284,10 +286,13 @@ h1 {
   }
   label,
   #icon-type,
-  #item-content {
+  #item-content,
+  #new-priority-select,
+  #priority-select {
     font-size: 0.55rem;
   }
-  #icon-type {
+  #icon-type,
+  #new-priority-select {
     height: 1.2rem;
   }
   #item-content {
